# AllenAgent

./: .env.example  .gitignore  AGENTS.md  Allen.md  CLAUDE.md  README.md  __init__.py  _inspect.txt  main.py  models.yaml.example  pyproject.toml  requirements.txt  start.bat
Rag_local_docs/IoT智能门禁管理系统/: README.md
Rag_local_docs/agent/: agent_intro.md
Rag_local_docs/deepseek/: deepseek_info.md
Rag_local_docs/rag/: rag_intro.md
agents/: allen_agent.py  compression.py  react_loop.py  system_prompt.py
backend/: config.py  main.py
backend/agents/: allen_agent.py  base.py  react_loop.py  reflect.py  system_prompt.py
backend/api/: app.py  config.py  dependencies.py  server.py
backend/guardrails/: tool_policy.py
backend/infrastructure/: embedding.py  llm_provider.py  model_manager.py
backend/memory/: conversation_store.py  long_term.py
backend/observability/: tracer.py
backend/schemas/: search.py  tool.py  trace.py
backend/services/: agent_service.py  conversation_service.py  memory_service.py  model_service.py
backend/tools/: base.py  knowledge_tool.py  (+2 more)
docs/: agent_tui_design.md  上下文压缩策略.md
frontend/: index.html  package-lock.json  package.json
guardrails/: guardrail.py  input_filter.py  output_filter.py
infrastructure/: vector_store.py
memory/: short_term.py
perception/: router.py  text_handler.py
schemas/: context.py  stream.py
tests/: conftest.py  test_agent.py  test_memory.py  test_token_counter.py  test_tools.py
tools/: file_tool.py  image_tool.py  pdf_tool.py  search_tool.py  shell_tool.py
utils/: content_cleaner.py
(+55 files in other folders)
