[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "allen-agents"
version = "1.1.0"
description = "Allen Agent - RAG + Agent + Multi-engine Search Q&A System"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.40.0",
    "chromadb>=0.4",
    "tiktoken>=0.5",
    "rich>=13.0",
    "textual>=0.40",
    "python-dotenv>=1.0",
    "requests>=2.28",
    "duckduckgo-search>=4.0",
    "Pillow>=10.0",
    "pytesseract>=0.3",
    "tenacity>=8.0",
    "pyyaml>=6.0",
]

[project.scripts]
allen = "main:run_tui"

[tool.setuptools]
py-modules = []
